--- a/templates/ajax/forum/posts.html.twig
+++ b/templates/ajax/forum/posts.html.twig
@@ -431,8 +431,15 @@
                 form.append($.html.createElement( '<p class="small bold"></p>', '{{ 'Verschiebe den aktuellen Thread in ein anderes Forum:'|trans({},'global')|e('js') }}' ));
 
                 let select = $.html.createElement('<select/>');
-                {% for move_forum in thread_moveable_forums %}
-                    select.append($.html.createElement( '<option value="{{ move_forum.id }}">{{ move_forum.title }}</option>' ) );
+                let group = null;
+                {% for label, forum_group in thread_moveable_forums %}
+                    group = $.html.createElement( '<optgroup label="{{ label }}"></optgroup>' )
+                    {% for move_forum in forum_group|sort((a,b) => a.worldForumSorting <=> b.worldForumSorting) %}
+                        group.append($.html.createElement( '<option value="{{ move_forum.id }}">{{ move_forum.title }}</option>' ) );
+                    {% endfor %}
+                    {% if forum_group is not empty %}
+                        select.append(group );
+                    {% endif %}
                 {% endfor %}
 
                 form.append(select)
