--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -183,7 +183,7 @@
                                 <div class="forum-button-disabled"><img alt="" src="{{ asset('build/images/icons/small_prev.gif') }}" /></div>
                                 <div class="forum-button-disabled"><img alt="" src="{{ asset('build/images/icons/small_moveleft.gif') }}" /></div>
                                 {% endif %}
-                                <div class="forum-button" x-forum-action="thread-select-page">
+                                <div class="forum-button" x-forum-action="thread-select-page" data-thread-current-page="{{ current_page }}">
                                     {{ 'Seite {page}/{pages}'|trans({'{page}': '<span class="current_page_marker">&nbsp;' ~ current_page ~ '</span>', '{pages}': pages},'global')|raw }}
                                     <div class="tooltip">
                                         {{ 'Zum Wechsein der Seite hier klicken'|trans({}, 'global') }}
