--- a/templates/ajax/soul/polls.html.twig
+++ b/templates/ajax/soul/polls.html.twig
@@ -99,6 +99,12 @@
                 <ul class="poll global-poll">
                     <li class="q">{{ selected.titleByLang(app.user.language)|raw }}</li>
                     <li class="plain">{{selected.descriptionByLang(app.user.language)|raw}}</li>
+                    {% if selected.startDate < 'now'|to_date and not selected.poll.participants.contains( app.user ) %}
+                        <li class="plain"><div class="help">
+                            <b>{{ 'Wichtiger Hinweis:'|trans({},'help')|raw }}</b>
+                            {{ 'Du kannst nur eine Antwort auswählen.'|trans({},'soul') }}
+                        </div></li>
+                    {% endif %}
                     {% set total = 0 %}
                     {% for answer in selected.poll.answers %}
                         {% set total = total + answer.tagNumber(group,tag) %}
